# tts-rs

./: Cargo.toml  README.md
examples/: demo.rs
src/: lib.rs  linux.rs
